--- a/pom.xml
+++ b/pom.xml
@@ -443,6 +443,21 @@
                 http://maven-gae-plugin.googlecode.com/svn/repository
             </url>
         </repository>
+        <repository>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <id>central</id>
+          <name>libs-releases</name>
+          <url>http://artifactory.alepar.ru/libs-releases</url>
+        </repository>
+        
+        <repository>
+          <snapshots />
+          <id>snapshots</id>
+          <name>libs-snapshots</name>
+          <url>http://artifactory.alepar.ru/libs-snapshots</url>
+        </repository>        
     </repositories>
 
     <pluginRepositories>
@@ -457,5 +472,19 @@
                 http://maven-gae-plugin.googlecode.com/svn/repository
             </url>
         </pluginRepository>
+        <pluginRepository>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <id>central</id>
+          <name>plugins-releases</name>
+          <url>http://artifactory.alepar.ru/plugins-releases</url>
+        </pluginRepository>
+        <pluginRepository>
+          <snapshots />
+          <id>snapshots</id>
+          <name>plugins-snapshots</name>
+          <url>http://artifactory.alepar.ru/plugins-snapshots</url>
+        </pluginRepository>        
     </pluginRepositories>
 </project>
