--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,13 @@
             <version>${gae.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-testing</artifactId>
+            <version>${gae.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
