--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,6 @@
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-incubator</artifactId>
             <version>2.0.1</version>
-            <scope>provided</scope>
         </dependency>
 
         <!--
@@ -361,7 +360,10 @@
             <plugin>
                 <groupId>net.kindleit</groupId>
                 <artifactId>maven-gae-plugin</artifactId>
-                <version>0.5.9</version>
+                <version>0.6.0</version>
+                <configuration>
+                    <serverId>appengine.google.com</serverId>
+                </configuration>                
             </plugin>
 
             <!--
