--- a/pom.xml
+++ b/pom.xml
@@ -27,29 +27,24 @@
             <version>2.2.1</version>
         </dependency>
 
-
         <!-- required by objectify -->
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>geronimo-jpa_3.0_spec</artifactId>
-            <version>1.1.1</version>            
+            <version>1.1.1</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
             <version>${gae.version}</version>
         </dependency>
 
-        <!-- 
-          GWT dependencies
-        -->
+        <!-- GWT dependencies -->
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
             <version>${gwt.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
@@ -63,7 +58,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.5.6</version>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
@@ -89,6 +83,7 @@
             <version>2.5.1</version>
             <scope>test</scope>
         </dependency>
+
         <!--
             GAE libraries for local testing as described here:
             http://code.google.com/appengine/docs/java/howto/unittesting.html
@@ -99,26 +94,35 @@
             <version>${gae.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-stubs</artifactId>
             <version>${gae.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-local-runtime</artifactId>
             <version>${gae.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-testing</artifactId>
             <version>${gae.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--Google Calendar integration-->
+        <dependency>
+            <groupId>net.fortuna.ical4j</groupId>
+            <artifactId>ical4j</artifactId>
+            <version>1.0-rc3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gdata</groupId>
+            <artifactId>gdata-calendar-2.0</artifactId>
+            <version>1.41.3</version>
         </dependency>
     </dependencies>
 
@@ -250,7 +254,7 @@
                 <version>0.6.0</version>
                 <configuration>
                     <serverId>appengine.google.com</serverId>
-                </configuration>                
+                </configuration>
             </plugin>
 
             <!--
@@ -410,6 +414,23 @@
             <id>snapshots</id>
             <name>libs-snapshots</name>
             <url>http://artifactory.alepar.ru/libs-snapshots</url>
+        </repository>
+
+        <repository>
+            <id>modularity-releases</id>
+            <name>Modularity Releases Repository</name>
+            <url>http://m2.modularity.net.au/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+
+        <repository>
+            <id>mandubian-mvn</id>
+            <url>http://mandubian-mvn.googlecode.com/svn/trunk/mandubian-mvn/repository</url>
         </repository>
     </repositories>
 
